# Detic

./: extract_region_features_f30k.sh  extract_region_features_jcre3.sh  pyproject.toml
detic/modeling/roi_heads/: detic_roi_heads.py
docs/: INSTALL.md
tools/: extract_region_features.py  run_detic_video.py
