[tool.poetry]
name = "detic"
version = "0.1.0"
description = ""
authors = ["SInadumi <inazumi19@icloud.com>"]
readme = "README.md"
package-mode=true
packages = [
    { include = "detic" },
    { include = "detectron2", from = "detectron2" },
    { include = "dataset_utils", from = "tools" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"

torch = [
    { platform = "darwin", version = "1.9.0", source = "PyPI" },
    { platform = "linux", url = "https://download.pytorch.org/whl/cu111/torch-1.9.0%2Bcu111-cp39-cp39-linux_x86_64.whl" },
]
torchvision =[
    { platform = "darwin", version = "0.10.0" },
    { platform = "linux", url = "https://download.pytorch.org/whl/cu111/torchvision-0.10.0%2Bcu111-cp39-cp39-linux_x86_64.whl"},
]
opencv-python = "^4.9.0.80"
mss = "^9.0.1"
timm = "0.5.4"
ftfy = "^6.2.0"
regex = "^2023.12.25"
fasttext-wheel = "^0.9.2"
scikit-learn = "^1.4.2"
lvis = "^0.5.3"
nltk = "^3.8.1"

cloudpickle = "^3.0.0"
omegaconf = "^2.3.0"
pycocotools = ">=2.0.2"

clip = {git = "https://github.com/openai/CLIP.git"}

numpy = "~1.22"
pillow = ">=7.1"
termcolor = ">=1.1"
yacs = ">=0.1.8"
tqdm = ">=4.29.0"
fvcore = ">=0.1.5,<0.1.6"
iopath = ">=0.1.7,<0.1.10"
hydra-core = ">=1.1"
h5py = "^3.12.1"
dataclasses-json = "^0.6.1"
pydantic = "^2.9.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
